--- a/src/scss/variables/root.scss
+++ b/src/scss/variables/root.scss
@@ -92,6 +92,9 @@ body {
 
 	--border-width: 1px;
 	--table-border-width: var(--border-width);
+
+	/* Readable line length off */
+	--file-margins: var(--size-4-2) var(--size-4-12);
 }
 
 .mod-macos {
